...
    private let columns = [GridItem(.flexible()), GridItem(.flexible())]
    
    var body: some View {
        VStack {
            HStack {
                Spacer()
                Text("My Favorite Pictures")
                    .font(.title2)
                    .padding()
                Spacer()
            }
            ScrollView {
                if favoritePictures.isEmpty {
...
